# Numerati_Summer_NYISO

./: .gitignore  README.md  pyproject.toml
configs/: dev.yaml  full.yaml
docs/: data_inventory.md  limitations.md  methodology.md
notebooks/: nyiso_workflow.ipynb
outputs/reports/: nyiso_initial_analysis.html  nyiso_presentation.html
outputs/tables/: clean_data_summary.csv  covariate_eda_summary.csv  daily_panel_missingness.csv  data_download_summary.csv  eda_dataset_summary.csv  hourly_panel_missingness.csv  initial_count_model_status.csv  outage_target_feasibility.csv  panel_summary.csv
src/nyiso_reliability/: __init__.py  cli.py  config.py  data_clean.py  data_download.py  eda.py  features.py  nb_model.py  report.py
tests/: test_basic.py
