[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyiso-reliability"
version = "0.1.0"
description = "Minimal NYISO outage and reliability research prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "pyarrow",
  "pyyaml",
  "typer",
  "rich",
  "matplotlib",
  "statsmodels",
  "pytest",
]

[project.scripts]
nyiso-reliability = "nyiso_reliability.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
